# chessx

./: CMakeLists.txt  CMakePresets.json  chessx.pro  resources.qrc
.github/workflows/: main.yml  package.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
data/qml/: notation.qml
pack/: CMakeLists.txt
src/: CMakeLists.txt
src/database/: config.cpp  config.h  databaseregistry.cpp  databaseregistry.h  gamex.cpp  gamex.h  historylist.cpp  historylist.h
src/database/scid/: sciddatabase.cpp
src/gui/: databaselist.cpp  databaselist.h  databaselistmodel.cpp  databaselistmodel.h  gamenotationwidget.cpp  gamenotationwidget.h  graphicsflowlayout.cpp  graphicsflowlayout.h  mainwindow.cpp  mainwindow.h  mainwindowactions.cpp  pgnwidget.cpp  pgnwidget.h
src/quazip/: CMakeLists.txt
